Make wildcard works in service's ExecStopPost

--- a/transmission-tracker-add.service
+++ b/transmission-tracker-add.service
@@ -8,7 +8,7 @@ Requires=network.target
 Type=simple
 ExecStart=/opt/tracker-add/bin/tracker-add-auto.sh
 ExecStop=/bin/kill -s TERM $MAINPID
-ExecStopPost=/bin/rm -f /tmp/TTAA.*.lock
+ExecStopPost=/bin/sh -c '/bin/rm -vf /tmp/TTAA.*.lock'
 KillMode=control-group
 StandardOutput=null
 CPUSchedulingPolicy=idle
